one manpage that got forgotten is removed now
some minor edits to the tutorials list

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,41 +7,41 @@
 
 <div class="subtitle">Beginner</div>
 <p>
-  <a href="Straight_Lines/">Straight Lines</a>'Tis somewhat rude. Perhaps the
+  <a href="Straight_Lines/">Straight Lines</a>  'Tis somewhat rude. Perhaps the
   exact right frame of mind which to approach The GIMP with though, at least 
   the first few times ....
 </p>
 <p>
-  <a href="The_Basics/">The Basics</a>The famous &quot;GIMP Floating Logos&quot; 
+  <a href="The_Basics/">The Basics</a>  The famous &quot;GIMP Floating Logos&quot; 
   rescued from the original GIMP web site and slightly modified to fit here.  Even
   if you hate images of text on the web, this tutorial gives you some of the basic
   layer manipulation techniques.  The knowledge can be applied to many many imaging
   projects and the logo *is* pretty cool ... 
 </p>
 <p>
-  <a href="Making_Selections/">Making Selections</a> Maybe someone could write an 
+  <a href="Making_Selections/">Making Selections</a>  Maybe someone could write an 
   an overview of the various selection tools and options. 
 </p>
 <p>
-  <a href="Borders_On_Selections/">Borders On Selections</a> Use curves and modes
+  <a href="Borders_On_Selections/">Borders On Selections</a>  Use curves and modes
   to transform your photo into a pen and ink watercolor like image. 
 </p>
 <p>
-  <a href="Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Use curves and modes
+  <a href="Anti-Aliased_Treshold/">Anti-Aliased Treshold</a>  Use curves and modes
   to transform your photo into a pen and ink watercolor like image. 
 </p>
 <p>
-  <a href="Bezier_Curves/">Bezier Curves</a> Use bezier curves like The GIMP Masters do.
+  <a href="Bezier_Curves/">Bezier Curves</a>  Use bezier curves like The GIMP Masters do.
 </p>
 <p>
   <a href="Quickmask/">Quickmask</a> Use Quickmask to make a vignette of your photos.
 </p>
 <p>
-  <a href="Red_Eye_Removal/">Red Eye Tutorial</a>Use the Channel Dialog in one method
+  <a href="Red_Eye_Removal/">Red Eye Tutorial</a> Use the Channel Dialog in one method
   of removing red eye from photos.
 </p>
 <p>
-  <a href="Custom_Brushes/">Custom Brushes</a>Make custom brushes for your GIMP.
+  <a href="Custom_Brushes/">Custom Brushes</a> Make custom brushes for your GIMP.
 </p>
 <div class="subtitle">Intermediate</div>
 <p>
@@ -53,11 +53,11 @@
   and learn about a new mode.
 </p>
 <p>
-  <a href="Changing_Background_Color_1/">Changing Background Color 1</a> Change the
+  <a href="Changing_Background_Color_1/"> Changing Background Color 1</a> Change the
   background color of your image and learn the magical properties of color2alpha.
 </p>
 <p>
-  <a href="Changing_Background_Color_2/">Changing Background Color 2</a> Change the
+  <a href="Changing_Background_Color_2/"> Changing Background Color 2</a> Change the
   background color of your image and learn the magical properties of Select By Color.
 </p>
 <p>
@@ -72,7 +72,7 @@
   along with layers and select tools.
 </p>
 <p>
-  <a href="Tileable_Textures/"></a> Learn about gradients, animated brushes and
+  <a href="Tileable_Textures/">Tileable Textures</a> Learn about gradients, animated brushes and
   how to make tileable images as well.
 </p>
 <div class="subtitle">Expert</div>
