tutorials/index.html: corrected the link to the Straight Line Tutorial

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,7 +7,7 @@
 
 <div class="subtitle">Beginner</div>
 <p>
-  <a href="Straight_Lines/">Straight Lines</a>  'Tis somewhat rude. Perhaps the
+  <a href="Straight_Line/">Straight Line Tutorial</a>  'Tis somewhat rude. Perhaps the
   exact right frame of mind which to approach The GIMP with though, at least 
   the first few times ....
 </p>
