Main title was not set.
Added the Stroke tutorial. Also changed the text for the images to tell "Image above" because of the layout.

--- a/tutorials/Straight_Line/index.html
+++ b/tutorials/Straight_Line/index.html
@@ -1,5 +1,5 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
-<title>GIMP - Title goes here</title>
+<title>GIMP - Straight Line Tutorial</title>
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
 <div class="heading">Straight Line Tutorial</div>
