Changed the Bezier_Curves to Bezier_Selections. Modified the titles in Bezier_Selections.

--- a/tutorials/Bezier_Selections/index.html
+++ b/tutorials/Bezier_Selections/index.html
@@ -1,8 +1,8 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
-<title>GIMP - Bezier Selection</title>
+<title>GIMP - Bezier Selections</title>
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
-<div class="heading">Bezier Selection</div>
+<div class="heading">Bezier Selections</div>
 
 <div class="subtitle">Intention</div>
 <p>
