--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -31,7 +31,7 @@
   to transform your photo into a pen and ink watercolor like image. 
 </p>
 <p>
-  <a href="Bezier_Curves/">Bezier Curves</a>  Use bezier curves like The GIMP Masters do.
+  <a href="Bezier_Selections/">Bezier Selections</a>  Use bezier curves like The GIMP Masters do.
 </p>
 <p>
   <a href="Quickmask/">Quickmask</a> Use Quickmask to make a vignette of your photos.
