--- a/team.html
+++ b/team.html
@@ -14,7 +14,16 @@
   <li>Web Technician, Henrik Brix Andersen</li>
   <li>Web Coordinator, Carol Spears</li>
   <li>Guest Lecturer, Manish Singh</li>
-  <li>Contributer, Branko Collins</li>
+  <li>Tutorial Coordinator, Niklas Mattisson</li>
+  <li>Windows Section, Branko Collins</li>
+</ul>
+<div class="subtitle">Tutorial Authors</div>
+<ul>
+  <li>Seth Burgess</li>
+  <li>Francisco Bustamante Hempe</li>
+  <li>Tuomas Kuosmanen</li>
+  <li>Jens T L</li>
+  <li>Ville Pätsi</li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
