Changed the Red Eye Tutorial to Red Eye Removal. Added the Red Eye tutorial.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -37,7 +37,7 @@
   <a href="Quickmask/">Quickmask</a> Use Quickmask to make a vignette of your photos.
 </p>
 <p>
-  <a href="Red_Eye_Removal/">Red Eye Tutorial</a> Use the Channel Dialog in one method
+  <a href="Red_Eye_Removal/">Red Eye Removal</a> Use the Channel Dialog in one method
   of removing red eye from photos.
 </p>
 <p>
