More index fixes.

--- a/tutorials/Film_Grain/index.html
+++ b/tutorials/Film_Grain/index.html
@@ -45,7 +45,7 @@
   <img src="sailboat-08-grain-masked-rebalanced.jpg" alt=""/>
 </p>
 <p>
-  First, desaturate the image. You can do this using <Image>/Colors/Desaturate or the Desaturate filter provided with the MathMap plugin.
+  First, desaturate the image. You can do this using &lt;Image&gt;/Colors/Desaturate or the Desaturate filter provided with the MathMap plugin.
   (The latter actually returns the luminosity of an image, not a desaturated version. Technically, it's better, but it's unnecessary for most images.)
 </p>
 
