Modified Changelog. Removed underscores in the name of
Modified Changelog.
Removed underscores in the name of Coloring_A_BW_Sketch. Looked weird with the rest of the layout IMHO.
Added the Coloring Sketch tutorial.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -65,7 +65,7 @@
   professional photo editing. 
 </p>
 <p>
-  <a href="Coloring_A_BW_Sketch/">Coloring_A_BW_Sketch</a> Color sketches anime style.
+  <a href="Coloring_A_BW_Sketch/">Coloring A BW Sketch</a> Color sketches anime style.
 </p>
 <p>
   <a href="3d_Logo/">3-d Floating Logo</a> Another GIMP Floating Logo method, this one uses modes
