--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -140,6 +140,105 @@
   Select the original text layer (the one you added some color to) and do the Alpha to Selection trick again. Right click on the image and use Select &gt; grow.
   This will make the new selection larger by a number of pixels - I used a value of 2 pixels. 
   Once you have a selection, be sure to reselect the new layer (outline) so that you can fill it (step 17).
+  And below is what it looks like.
+</p>
+
+<div class="subtitle">Step 13</div>
+<p class="images">
+  <img src="logo-15.png" alt=""/>
+  <img src="logo-16.png" alt=""/>
+</p>
+<p>
+  Fill the layer with black and deselect (CTRL+SHIFT+A on PC or Command+SHIFT+A on Mac). As you can see, the image now has more background contrast. 
+  Now, duplicate that layer and lower the copy below the original outline layer. Make sure that Keep Trans. is not checked, and blur it. 
+  I like soft shadows, so I used a Gaussian Blur (RLE) of about 30 pixels. Drop the Opacity of the layer down to about 50 and nudge it to the right and down until it looks okay.
+</p>
+<p>
+  A nice way to fill selection areas or layers that have Keep Trans. selected, is to simply drag the color from the toolbox color swatch to the layer.
+</p>
+
+<div class="subtitle">Step 14</div>
+<p class="images">
+  <img src="logo-17.png" alt=""/>
+  <img src="logo-18.png" alt=""/>
+</p>
+<p>
+  (Left Image) This is what the Layers, Channels, &amp; Paths dialog should look like. 
+</p>
+<p>
+  (Right Image) I've duplicated the highlight and lowlight layers and made them all blend with the lower layers using the Overlay mode. This helps to make the edges more 3D.
+</p>
+
+<div class="subtitle">Step 15</div>
+<p class="images">
+  <img src="logo-19.png" alt=""/>
+  <img src="logo-20.png" alt=""/>
+</p>
+<p>
+  Create a new transparent layer called rust and select the bezier tool (shown here as the depressed button).
+</p>
+<p>
+  Rust isn't uniform and I've decided to only worry about the lower half of the letters. Use the bezier tool on the new rust  layer to start a selection that looks like...
+</p>
+
+<div class="subtitle">Step 16</div>
+<p class="images">
+  <img src="logo-21.png" alt=""/>
+  <img src="logo-22.png" alt=""/>
+</p>
+<p>
+  (Left Image) This. Click inside the bezier path once you close it (close it by clicking one the first node). This will create a selection. 
+  Use Select &gt; feather to feather (blur) the selection. I used a value of about 10 pixels.
+</p>
+<p>
+  (Right Image) Pick a nice bright orange or brown color for the rust. My site logo used a reddy-borwn color, but here I've chosen a bright orange. 
+  Fill the selection with it. Using the famed Alpha to Selection move, get the selection for the original text layer. Once you have that selection area,
+  click the rust layer to make it active. Invert the selection (CTRL+I or Command+I) and Cut. This will leave only the part of the rust layer that actually
+  covers the letters and not the extra. 
+</p>
+
+<div class="subtitle">Step 17</div>
+<p class="images">
+  <img src="logo-23.png" alt=""/>
+  <img src="logo-24.png" alt=""/>
+</p>
+<p>
+  (Left Image) Change the Layer Mode of the rust layer to Muliply (Burn). The image should now look a little like this (Right Image). Don't worry, it'll look better soon.
+</p>
+
+<div class="subtitle">Step 18</div>
+<p class="images">
+  <img src="logo-25.png" alt=""/>
+</p>
+<p>
+  With the rust layer selected, add a Layer Mask.
+</p>
+
+<div class="subtitle">Step 19</div>
+<p class="images">
+  <img src="logo-26.png" alt=""/>
+  <img src="logo-27.png" alt=""/>
+</p>
+<p>
+  (Left Image) Making sure that you reset the color swatches on the toolbox, use the gradient tool to make a gradient in the Layer Mask so it looks like this. 
+</p>
+<p>
+  (Right Image) The image should now look like this.
+</p>
+
+<div class="subtitle">Final</div>
+<p class="images">
+  <img src="logo-28.png" alt=""/>
+</p>
+<p>
+  With a little playing around you can get to this. I duplicated the rust layer and moved them (the original rust and the copy) down the stack until 
+  the highlight and lowlight layers were above them. I also duplicated the original text layer, switched on Keep Trans., and used Render &gt; Clouds &gt; Noise to add
+  a bit of interest to the layer. Try using the Curves tool to help with this. You may also notice that the outline layer is blurred. Sometimes this can help.
+  The idea is, try stuff and find out.
+</p>
+<p>
+  Well, thats it. Hope that taught you the power of selections and layer modes to some degree. There are many people who tout the use of channel masks,
+  but don't under estimate the power of selections to do your dirty work.
 </p>
 
 </div>
