--- a/tutorials/Straight_Line/index.html
+++ b/tutorials/Straight_Line/index.html
@@ -11,11 +11,12 @@
   a mouse or tablet, and to take advantage of the power of a computer to make things look neat and orderly.
   This tutorial doesn't use Straight Lines for complex tasks; its intended to show how you can use it to create quick and easy line effects.
 </p>
+<p class="images">
+  <img src="straight_line_example.png" alt=""/>
+</p>
 
 <div class="subtitle">Step 1</div>
 <p class="images">
-  <img src="straight_line_example.png" alt=""/>
-<br />
   <img src="shiftkey.png" alt=""/>
   <img src="mouse.png" alt=""/>
 </p>
