added text describing the awards section

--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,11 @@
     <li><a href="http://bug.gimp.org/">GIMP Bugzilla</a></li>
     <li><a href="http://www.gtk.org/">The Gimp Tool Kit</a></li>
   </ul>
-<div class="subtitle"><a href="awards.html">Awards won by The GIMP</a></div>
+<div class="subtitle">Awards won by The GIMP</div>
+<p>
+  The GIMP has won several awards through time. For a list of the awards click 
+  <a href="awards.html">here</a>.
+</p>
 <div class="subtitle">The GIMP in the Real World</div>
 <p>The GIMP In Education</p>
   <ul name="urls-news-education">
