--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -1,94 +1,1 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
-<title>GIMP - Resources - Brushes</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
-
-<div class="heading">Resources - Brushes</div>
-<div class="subtitle">Classic Brushes That Come With The GIMP</div>
-<p>
-  *.gbr from /usr/local/share/gimp/1.2/brushes/*.gbr someone should 
-  get this from the gimp source when a new tarball is made.
-</p>
-    <p>Calligraphic Brush</p>
-    <p>Calligraphic Brush#2</p>
-    <p>Calligraphic Brush#3</p>
-    <p>Calligraphic Brush#4</p>
-    <p>Circle (01) (1 x 1)</p>
-    <p>Circle (03) (3 x 3)</p>
-    <p>Circle (05) (5 x 5)</p>
-    <p>Circle (07) (7 x 7)</p>
-    <p>Circle (03) (3 x 3)</p>
-    <p>Circle (09) (9 x 9)</p>
-    <p>Circle (11) (11 x 11)</p>
-    <p>Circle (13) (13 x 13)</p>
-    <p>Circle (15) (15 x 15)</p>
-    <p>Circle (17) (17 x 17)</p>
-    <p>Circle (19) (19 x 19)</p>
-    <p>Circle Fuzzy (03) (3 x 3)</p>
-    <p>Circle Fuzzy (05) (5 x 5)</p>
-    <p>Circle Fuzzy (07) (7 x 7)</p>
-    <p>Circle Fuzzy (09) (9 x 9)</p>
-    <p>Circle Fuzzy (11) (11 x 11)</p>
-    <p>Circle Fuzzy (13) (13 x 13)</p>
-    <p>Circle Fuzzy (15) (15 x 15)</p>
-    <p>Circle Fuzzy (17) (17 x 17)</p>
-    <p>Circle Fuzzy (19) (19 x 19)</p>
-    <p>Confetti</p>
-    <p>Diagonal Star (11) (11 x 11)</p>
-    <p>Diagonal Star (17) (17 x 17)</p>
-    <p>Diagonal Star (25) (25 x 25)</p>
-    <p>Gimp Brush (55 x 45)</p>
-    <p>Galaxy (AP) (53 x 49)</p>
-    <p>Galaxy Big (100 x 100)</p>
-    <p>Galaxy, Small (AP) (27 x 26)</p>
-    <p>Pepper (49 x 61)</p>
-    <p>Property of XCF! (100 x 44)</p>
-    <p>Sand Dunes (AP) (33 x 32)</p>
-    <p>pixel (1 x 1 square)</p>
-    <p>square (10 x 10)</p>
-    <p>square blur (10 x 10)</p>
-    <p>square (20 x 20)</p>
-    <p>square blur (20 x 20)</p>
-    <p>square (5 x 5)</p>
-    <p>square blur (5 x 5)</p>
-</div>
-<div class="subtitle">How To Make Your Own Classic Brushes</div>
-<p>
-  something both comprehensible and inspiring that mentions saving as gbr in
-  ~/.gimp-1.2/brushes/ directory.
-</p>
-<p>
-  Tutorials That Explain Further
-</p>
-<ul name="urls-brushes-gbr">
-  <li><a href="tutorial-url">tutorial name</a></li>
-  <li><a href="tutorial-url">tutorial name</a></li>
-</ul>
-<div class="subtitle">Animated Brushes That Come With The GIMP</div>
-<p>
-  *.gih from /usr/local/share/gimp/1.2/brushes/*.gih  someone should 
-  get this from the gimp source when a new tarball is made.
-</p>
-   <p>Felt Pen</p>
-   <p>Pencil Sketch</p>
-   <p>Pencil Sketch 2</p>
-   <p>Pencil Sketch 3</p>
-   <p>Sparks</p>
-   <p>Vine</p>
-   <p>animated Confetti</p>
-<div class="subtitle">How To Make Your Own Animated Brushes</div>
-<p>
-  something both comprehensible and inspiring (and brief) that mentions saving 
-  as gih in ~/.gimp-1.2/brushes/ directory. and something about the different
-  fields that need to be filled in and how they work. 
-</p>
-<p>
-  Tutorials That Explain Further
-</p>
-<ul name="urls-brushes-gih">
-  <li><a href="tutorial-url">tutorial name</a></li>
-  <li><a href="tutorial-url">tutorial name</a></li>
-</ul>
-
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/header_pretitle.inc" --><title>GIMP - Resources</title><!--#include virtual="/includes/header_posttitle.inc" --><!--#include virtual="/includes/menu.inc" --><!--This page rendered with mgo-brushes --><div class="heading">Resources</div><div class="subtitle">Included With The GIMP</div><p>More than just a bunch of tools, The GIMP has stuff too ....</p><ul><li style="list-style-image: url(Calligraphic_Brush.png);">Calligraphic Brush</li><li style="list-style-image: url(Calligraphic_Brush2.png);">Calligraphic Brush#2</li><li style="list-style-image: url(Calligraphic_Brush3.png);">Calligraphic Brush#3</li><li style="list-style-image: url(Calligraphic_Brush4.png);">Calligraphic Brush#4</li><li style="list-style-image: url(Circle_01.png);">Circle (01)</li><li style="list-style-image: url(Circle_03.png);">Circle (03)</li><li style="list-style-image: url(Circle_05.png);">Circle (05)</li><li style="list-style-image: url(Circle_07.png);">Circle (07)</li><li style="list-style-image: url(Circle_09.png);">Circle (09)</li><li style="list-style-image: url(Circle_11.png);">Circle (11)</li><li style="list-style-image: url(Circle_13.png);">Circle (13)</li><li style="list-style-image: url(Circle_15.png);">Circle (15)</li><li style="list-style-image: url(Circle_17.png);">Circle (17)</li><li style="list-style-image: url(Circle_19.png);">Circle (19)</li><li style="list-style-image: url(Circle_Fuzzy_03.png);">Circle Fuzzy (03)</li><li style="list-style-image: url(Circle_Fuzzy_05.png);">Circle Fuzzy (05)</li><li style="list-style-image: url(Circle_Fuzzy_07.png);">Circle Fuzzy (07)</li><li style="list-style-image: url(Circle_Fuzzy_09.png);">Circle Fuzzy (09)</li><li style="list-style-image: url(Circle_Fuzzy_11.png);">Circle Fuzzy (11)</li><li style="list-style-image: url(Circle_Fuzzy_13.png);">Circle Fuzzy (13)</li><li style="list-style-image: url(Circle_Fuzzy_15.png);">Circle Fuzzy (15)</li><li style="list-style-image: url(Circle_Fuzzy_17.png);">Circle Fuzzy (17)</li><li style="list-style-image: url(Circle_Fuzzy_19.png);">Circle Fuzzy (19)</li><li style="list-style-image: url(Confetti.png);">Confetti</li><li style="list-style-image: url(Diagonal_Star_11.png);">Diagonal Star (11)</li><li style="list-style-image: url(Diagonal_Star_17.png);">Diagonal Star (17)</li><li style="list-style-image: url(Diagonal_Star_25.png);">Diagonal Star (25)</li><li style="list-style-image: url(Felt_Pen.png);">Felt Pen</li><li style="list-style-image: url(GIMP_Brush.png);">GIMP Brush</li><li style="list-style-image: url(Galaxy_AP.png);">Galaxy (AP)</li><li style="list-style-image: url(Galaxy_Big.png);">Galaxy, Big</li><li style="list-style-image: url(Galaxy_Small_AP.png);">Galaxy, Small (AP)</li><li style="list-style-image: url(Pencil_Sketch.png);">Pencil Sketch</li><li style="list-style-image: url(Pencil_Sketch2.png);">Pencil Sketch#2</li><li style="list-style-image: url(Pencil_Sketch3.png);">Pencil Sketch#3</li><li style="list-style-image: url(Pepper.png);">Pepper</li><li style="list-style-image: url(Property_of_XCF!.png);">Property of XCF!</li><li style="list-style-image: url(Sand_Dunes_AP.png);">Sand Dunes (AP)</li><li style="list-style-image: url(Sparks.png);">Sparks</li><li style="list-style-image: url(Vine.png);">Vine</li><li style="list-style-image: url(animated_Confetti.png);">animated Confetti</li><li style="list-style-image: url(pixel_1x1_square.png);">pixel (1x1 square)</li><li style="list-style-image: url(square_10x10.png);">square (10x10)</li><li style="list-style-image: url(square_10x10_blur.png);">square (10x10) blur</li><li style="list-style-image: url(square_20x20.png);">square (20x20)</li><li style="list-style-image: url(square_20x20_blur.png);">square (20x20) blur</li><li style="list-style-image: url(square_5x5.png);">square (5x5)</li><li style="list-style-image: url(square_5x5_blur.png);">square (5x5) blur</li></ul><!--#include virtual="/includes/linkbar.inc" --><!--#include virtual="/includes/footer.inc" -->
