Changed the steps in the tutorial.

--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -86,15 +86,20 @@
 <div class="subtitle">Step 8</div>
 <p class="images">
   <img src="logo-07.png" alt=""/>
-  <img src="logo-08.png" alt=""/>
 </p>
 <p>
   Now that the layer is selected...
-  <br /><br />
-  Select the highlight layer and...
 </p>
 
 <div class="subtitle">Step 9</div>
+<p class="images">
+  <img src="logo-08.png" alt=""/>
+</p>
+<p>
+  Select the highlight layer and... 
+</p>
+
+<div class="subtitle">Step 10</div>
 <p class="images">
   <img src="logo-09.png" alt=""/>
 </p>
@@ -105,7 +110,7 @@
   about 5 pixels), then make the cut from the lowlight layer. Once you're done, delete the two blurred layers (tmp1 and tmp2). 
 </p>
 
-<div class="subtitle">Step 10</div>
+<div class="subtitle">Step 11</div>
 <p class="images">
   <img src="logo-10.png" alt=""/>
 </p>
@@ -114,99 +119,138 @@
   to clean up temporary layers occasionally.
 </p>
 
-<div class="subtitle">Step 11</div>
+<div class="subtitle">Step 12</div>
 <p class="images">
   <img src="logo-11.png" alt=""/>
-  <img src="logo-12.png" alt=""/>
 </p>
 <p>
   Now we'll add the first elements of 3D-ness to the logo. The original text layer is the base layer for any color you want to add. I'll use grey70,
   but you could just as easily use any old color you like. It's a good idea to play with this as you can get some funky plastic logos too. Make sure
   Keep Trans. is checked when you fill the layer.
-  <br /><br />
-  As you can see in the upper right image, it's starting to look like something now.
 </p>
 
-<div class="subtitle">Step 12</div>
+<div class="subtitle">Step 13</div>
+<p class="images">
+   <img src="logo-12.png" alt=""/>
+</p>
+<p>
+  As you can see, it's starting to look like something now.
+</p>
+
+<div class="subtitle">Step 14</div>
 <p class="images">
   <img src="logo-13.png" alt=""/>
-  <img src="logo-14.png" alt=""/>
 </p>
 <p>
   Click the blank piece of paper on the Layers, Channels, &amp;  Paths dialog and make a new transparent layer called outline. Move this new layer down the
   layers stack until it's underneath the original text layer.
 </p>
-<p>
-  Select the original text layer (the one you added some color to) and do the Alpha to Selection trick again. Right click on the image and use Select &gt; grow.
-  This will make the new selection larger by a number of pixels - I used a value of 2 pixels. 
-  Once you have a selection, be sure to reselect the new layer (outline) so that you can fill it (step 17).
-  And below is what it looks like.
-</p>
-
-<div class="subtitle">Step 13</div>
-<p class="images">
-  <img src="logo-15.png" alt=""/>
-  <img src="logo-16.png" alt=""/>
-</p>
-<p>
-  Fill the layer with black and deselect (CTRL+SHIFT+A on PC or Command+SHIFT+A on Mac). As you can see, the image now has more background contrast. 
-  Now, duplicate that layer and lower the copy below the original outline layer. Make sure that Keep Trans. is not checked, and blur it. 
-  I like soft shadows, so I used a Gaussian Blur (RLE) of about 30 pixels. Drop the Opacity of the layer down to about 50 and nudge it to the right and down until it looks okay.
-</p>
-<p>
-  A nice way to fill selection areas or layers that have Keep Trans. selected, is to simply drag the color from the toolbox color swatch to the layer.
-</p>
-
-<div class="subtitle">Step 14</div>
-<p class="images">
-  <img src="logo-17.png" alt=""/>
-  <img src="logo-18.png" alt=""/>
-</p>
-<p>
-  (Left Image) This is what the Layers, Channels, &amp; Paths dialog should look like. 
-</p>
-<p>
-  (Right Image) I've duplicated the highlight and lowlight layers and made them all blend with the lower layers using the Overlay mode. This helps to make the edges more 3D.
-</p>
 
 <div class="subtitle">Step 15</div>
 <p class="images">
-  <img src="logo-19.png" alt=""/>
-  <img src="logo-20.png" alt=""/>
+  <img src="logo-14.png" alt=""/>
 </p>
 <p>
-  Create a new transparent layer called rust and select the bezier tool (shown here as the depressed button).
-</p>
-<p>
-  Rust isn't uniform and I've decided to only worry about the lower half of the letters. Use the bezier tool on the new rust  layer to start a selection that looks like...
+  Select the original text layer (the one you added some color to) and do the Alpha to Selection trick again. 
+  Right click on the image and use Select &gt; grow. This will make the new selection larger by a number of pixels - 
+  I used a value of 2 pixels. Once you have a selection, be sure to reselect the new layer (outline) so that you can 
+  fill it (step 17). And below is what it looks like.
 </p>
 
 <div class="subtitle">Step 16</div>
 <p class="images">
+  <img src="logo-15.png" alt=""/>
+</p>
+<p>
+  And this is what it looks like.
+</p>
+
+<div class="subtitle">Step 17</div>
+<p class="images">
+  <img src="logo-16.png" alt=""/>
+</p>
+<p>
+  Fill the layer with black and deselect (CTRL+SHIFT+A on PC or Command+SHIFT+A on Mac). 
+  As you can see, the image now has more background contrast. 
+  Now, duplicate that layer and lower the copy below the original outline layer. Make sure that Keep Trans. is not checked, and blur it. 
+  I like soft shadows, so I used a Gaussian Blur (RLE) of about 30 pixels. Drop the Opacity of the layer down to about 50 and nudge it 
+  to the right and down until it looks okay.
+  <br /><br />
+  A nice way to fill selection areas or layers that have Keep Trans. selected, is to simply drag the color from the 
+  toolbox color swatch to the layer.
+</p>
+
+<div class="subtitle">Step 18</div>
+<p class="images">
+  <img src="logo-17.png" alt=""/>
+</p>
+<p>
+  This is what the Layers, Channels, &amp; Paths dialog should look like. 
+</p>
+
+<div class="subtitle">Step 19</div>
+<p class="images">
+  <img src="logo-18.png" alt=""/>
+</p>
+<p>
+  I've duplicated the highlight and lowlight layers and made them all blend with the lower layers using the Overlay mode. This helps to make the edges more 3D.
+</p>
+
+<div class="subtitle">Step 20</div>
+<p class="images">
+  <img src="logo-19.png" alt=""/>
+</p>
+<p>
+  Create a new transparent layer called rust and select the bezier tool (shown here as the depressed button).
+</p>
+
+<div class="subtitle">Step 21</div>
+<p class="images">
+  <img src="logo-20.png" alt=""/>
+</p>
+<p>
+  Rust isn't uniform and I've decided to only worry about the lower half of the letters. Use the bezier tool on the new rust 
+  layer to start a selection that looks like...
+</p>
+
+<div class="subtitle">Step 22</div>
+<p class="images">
   <img src="logo-21.png" alt=""/>
+</p>
+<p>
+  This. Click inside the bezier path once you close it (close it by clicking one the first node). 
+  This will create a selection. 
+  Use Select &gt; feather to feather (blur) the selection. I used a value of about 10 pixels.
+</p>
+
+<div class="subtitle">Step 23</div>
+<p class="images">
   <img src="logo-22.png" alt=""/>
 </p>
 <p>
-  (Left Image) This. Click inside the bezier path once you close it (close it by clicking one the first node). This will create a selection. 
-  Use Select &gt; feather to feather (blur) the selection. I used a value of about 10 pixels.
-</p>
-<p>
-  (Right Image) Pick a nice bright orange or brown color for the rust. My site logo used a reddy-borwn color, but here I've chosen a bright orange. 
+  Pick a nice bright orange or brown color for the rust. My site logo used a reddy-borwn color, but here I've chosen a bright orange. 
   Fill the selection with it. Using the famed Alpha to Selection move, get the selection for the original text layer. Once you have that selection area,
   click the rust layer to make it active. Invert the selection (CTRL+I or Command+I) and Cut. This will leave only the part of the rust layer that actually
   covers the letters and not the extra. 
 </p>
 
-<div class="subtitle">Step 17</div>
+<div class="subtitle">Step 24</div>
 <p class="images">
   <img src="logo-23.png" alt=""/>
+</p>
+<p>
+  Change the Layer Mode of the rust layer to Muliply (Burn). 
+</p>
+
+<div class="subtitle">Step 25</div>
+<p class="images">
   <img src="logo-24.png" alt=""/>
 </p>
 <p>
-  (Left Image) Change the Layer Mode of the rust layer to Muliply (Burn). The image should now look a little like this (Right Image). Don't worry, it'll look better soon.
+  The image should now look a little like this (Right Image). Don't worry, it'll look better soon.
 </p>
 
-<div class="subtitle">Step 18</div>
+<div class="subtitle">Step 26</div>
 <p class="images">
   <img src="logo-25.png" alt=""/>
 </p>
@@ -214,16 +258,20 @@
   With the rust layer selected, add a Layer Mask.
 </p>
 
-<div class="subtitle">Step 19</div>
+<div class="subtitle">Step 27</div>
 <p class="images">
   <img src="logo-26.png" alt=""/>
+</p>
+<p>
+  Making sure that you reset the color swatches on the toolbox, use the gradient tool to make a gradient in the Layer Mask so it looks like this. 
+</p>
+
+<div class="subtitle">Step 28</div>
+<p class="images">
   <img src="logo-27.png" alt=""/>
 </p>
 <p>
-  (Left Image) Making sure that you reset the color swatches on the toolbox, use the gradient tool to make a gradient in the Layer Mask so it looks like this. 
-</p>
-<p>
-  (Right Image) The image should now look like this.
+  The image should now look like this.
 </p>
 
 <div class="subtitle">Final</div>
