Wrong file name in Example5.

--- a/tutorials/Image_Pipes/index.html
+++ b/tutorials/Image_Pipes/index.html
@@ -127,7 +127,7 @@
 
 <div class="subtitle">Example 5</div>
 <p class="images">
-  <img src="example5_ss.gif" alt=""/>
+  <img src="example_ss5.gif" alt=""/>
 </p>
 <p>
   Converting a PSP image tube to a gimp Image Pipe 
