Modified Changelog. Changed the image position of a few tutorials to make
Modified Changelog.
Changed the image position of a few tutorials to make them look better with the layout.
Add a standard font to use in the screenshots.

--- a/tutorials/Borders_On_Selections/index.html
+++ b/tutorials/Borders_On_Selections/index.html
@@ -5,14 +5,14 @@
 <div class="heading">Borders On Selections</div>
 
 <div class="subtitle">Intention</div>
+<p class="images">
+  <img src="img14_step1.png" alt=""/>
+</p>
 <p>
   Since Gimp is an image manipulation program and not a painting program it doesn't include tools to draw shapes like squares and circles.
   However this doesn't mean you can paint them, in fact there are some interesting options regarding this subject when it comes to the gimp.
   The solution is to use the selection stroking capabilities of the Gimp. This option can be accesed on the image menu (right button click 
   on the image), by going to "Edit-&gt;Stroke".
-</p>
-<p class="images">
-  <img src="img14_step1.png" alt=""/>
 </p>
 
 <div class="subtitle">Step 1</div>
@@ -47,7 +47,7 @@
   <img src="img17_result.png" alt=""/>
 </p>
 <p>
-  When all the options are selected you can finally click on "Edit->Stroke". Using a small brush and selecting a blue color here is 
+  When all the options are selected you can finally click on "Edit-&gt;Stroke". Using a small brush and selecting a blue color here is 
   the result for the selection made above:
 </p>
 
