added the wgo screenshot font to the sample gtkrc

--- a/unix/gtkrc.html
+++ b/unix/gtkrc.html
@@ -9,6 +9,14 @@
 # widget <widget_set> style <style_name>
 # widget_class <widget_class_set> style <style_name>
 
+# this sets the font on the windows, ie. Files Xtns Help at the top
+# of the tool bar. this is the font that wgo uses for its screenshots also
+style "user-font"
+{
+font="-adobe-helvetica-medium-r-normal-*-12-*-*-*-p-*-iso8859-1"
+}
+widget_class "*" style "user-font"
+
 style "ruler"
 {
   font = "-adobe-helvetica-medium-r-normal--*-80-*-*-*-*-*-*"
