Modified Changelog. Done with the tutorial porting.
Modified Changelog.
Done with the tutorial porting.

--- a/tutorials/Draw_A_Paint_Brush/index.html
+++ b/tutorials/Draw_A_Paint_Brush/index.html
@@ -93,11 +93,150 @@
   Again, think how the light would reflect and how the shadows would be on a real object. And dont worry if it does not look right at first, it needs some practice and patience. 
 </p>
 
+<div class="subtitle">Step 10</div>
+<p class="images">
+  <img src="10.png" alt=""/>
+</p>
+<p>
+  Also add some hilights by using white color on the airbrush. You can make the object appear more metal-like by adding a second hilight to 
+  the "shadow" edge as if it was reflected from the background plane. If your background was having some color, you could add slight tint of 
+  that color to the "second" reflection.
+  <br /><br />
+  Again, since the metal has a pretty shiny surface, you can use the Dodge/Burn tool to make the shadows and hilights stronger. Using brighness and contrast might help too. 
+</p>
+
+<div class="subtitle">Step 11</div>
+<p class="images">
+  <img src="11.png" alt=""/>
+</p>
+<p>
+  We add the "engraving" by painting blackwith a very small brush, airbrush again works well. Try to make it look like some letter ornament or whatever you like.
+</p>
+
+<div class="subtitle">Step 12</div>
+<p class="images">
+  <img src="12.png" alt=""/>
+</p>
+<p>
+  Add hilights with white color to the areas that would get reflection. Since the light comes from top left, the hilights go to bottom right of the black "engraved" shapes.
+</p>
+
+<div class="subtitle">Step 13</div>
+<p class="images">
+  <img src="13.png" alt=""/>
+</p>
+<p>
+  Next we want to do the rest of the handle. We again create a new layer for it. Since it comes from "inside" the metal part, it is better to put it behind the metal part layers.
+</p>
+
+<div class="subtitle">Step 14</div>
+<p class="images">
+  <img src="14.png" alt=""/>
+</p>
+<p>
+  Again, the bezier selection tool. Yes, I love it. You should too. Make a nice tapered shape that represents the brush handle.
+</p>
+
+<div class="subtitle">Step 15</div>
+<p class="images">
+  <img src="15.png" alt=""/>
+</p>
+<p>
+  Doubleclick the "Bucket fill" tool and select "Pattern source" from the tool options window. Select one of the wooden patterns. 
+  This will make the texture of the handle. Fill the selection with the wooden pattern. 
+</p>
+
+<div class="subtitle">Step 16</div>
+<p class="images">
+  <img src="16.png" alt=""/>
+</p>
+<p>
+  Add another layer, this time for the hilight of the wood. Position it just above the handle layer. 
+</p>
+
+<div class="subtitle">Step 17</div>
+<p class="images">
+  <img src="17.png" alt=""/>
+</p>
+<p>
+  First, like you did on the "metal" part, shade the wooden handle a bit with the airbrush tool so it looks round. 
+  Then do a hilight like you did for the brush tip on steps 5-7. You might want to reduce the fill opacity a bit since the wood is quite not as shiny as the wet brush tip. 
+</p>
+
+<div class="subtitle">Step 18</div>
+<p class="images">
+  <img src="18.png" alt=""/>
+</p>
+<p>
+  Okay, it looks very much like a brush already... Lets just add a shadow and it looks better.
+</p>
+
+<div class="subtitle">Step 19</div>
+<p class="images">
+  <img src="19.png" alt=""/>
+</p>
+<p>
+  Duplicate the image, delete the background and select "Merge visible layers" to make the brush just one layer. 
+  We are going to make this copy into a drop shadow for the original brush.
+</p>
+
+<div class="subtitle">Step 20</div>
+<p class="images">
+  <img src="20.png" alt=""/>
+</p>
+<p>
+  Turn on "Keep Trans" checkbox on the layers dialog, and select the whole image and fill it black with the bucket fill tool.
+</p>
+
+<div class="subtitle">Step 21</div>
+<p class="images">
+  <img src="21.png" alt=""/>
+</p>
+<p>
+  Unselect the "keep trans" and blur the layer a fair bit, I think I used something like 20 for the radius.
+</p>
+
+<div class="subtitle">Step 22</div>
+<p class="images">
+  <img src="22.png" alt=""/>
+</p>
+<p>
+  Now scale the shadow image so that it is 60% of the original height, but keep the original width. 
+  You need to click the "chain" button on the scale dialog to change the image's aspect ratio.
+</p>
+
+<div class="subtitle">Step 23</div>
+<p class="images">
+  <img src="23.png" alt=""/>
+</p>
+<p>
+  Copy the shadow image on the original brush image, and move it just above the background layer. 
+  The easiest way to copy a layer is to drag it from the layers dialog to an image.
+</p>
+
+<div class="subtitle">Step 24</div>
+<p class="images">
+  <img src="24.png" alt=""/>
+</p>
+<p>
+  I wanted to erase some of the shadow of the handle so it looks more realistic. I just used the eraser tool with a big fuzzy brush.
+</p>
+
+<div class="subtitle">Step 25</div>
+<p class="images">
+  <img src="25.png" alt=""/>
+</p>
+<p>
+  There! The finished paintbrush image. And you learned a lot about the Gimp as well.
+  <br />
+  Thank you for the interest :-)
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2002 <a href="mailto:user@host.org">Author Name</a>
+        Tutorial &copy; 2002 <a href="mailto:tigert@gimp.org">Tuomas Kuosmanen (tigert)</a>
       </span>
       <span id="footerright">
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
