Modified Changelog. Split the animations into Simple and Advanced.
Modified Changelog.
Split the animations into Simple and Advanced.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -75,6 +75,9 @@
   <a href="Tileable_Textures/">Tileable Textures</a> Learn about gradients, animated brushes and
   how to make tileable images as well.
 </p>
+<p>
+ <a href="Simple_Animations/">Simple Animations</a> Learn how to work with GIMP's layers as animation frames.
+</p>
 <div class="subtitle">Expert</div>
 <p>
   <a href="Image_Pipes/">Make GIMP Image Pipes</a> Rank and Dimension.  The GIMP's
@@ -93,7 +96,7 @@
   your GIMP like the masters do.
 </p>
 <p>
-  <a href="Animation/">Simple and Complex Animations</a> The GIMP animates also.
+ <a href="Advanced_Animations/">Advanced Animations</a> Learn how to use the GAP, GIMP animation package.
 </p>
 <div class="subtitle">Script Authoring (Presented Alphabetically)</div>
 <p>
