resources/brushes/index.html and mgo-brushes.py: divided the brush listing in the middle
resources/brushes/ and mgo-brushes.py:  added the directory, images, and
the index page.

--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -1,7 +1,8 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
 <title>GIMP - Resources</title>
 <!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" --><!--This page rendered with mgo-brushes -->
+<!--#include virtual="/includes/menu.inc" -->
+<!--This page rendered with mgo-brushes -->
 <div class="heading">Resources</div>
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
@@ -30,6 +31,7 @@
 <li style="list-style-image: url(Circle_Fuzzy_17.png);">Circle Fuzzy (17)</li>
 <li style="list-style-image: url(Circle_Fuzzy_19.png);">Circle Fuzzy (19)</li>
 <li style="list-style-image: url(Confetti.png);">Confetti</li>
+</ul><ul>
 <li style="list-style-image: url(Diagonal_Star_11.png);">Diagonal Star (11)</li>
 <li style="list-style-image: url(Diagonal_Star_17.png);">Diagonal Star (17)</li>
 <li style="list-style-image: url(Diagonal_Star_25.png);">Diagonal Star (25)</li>
