--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -96,6 +96,9 @@
   your GIMP like the masters do.
 </p>
 <p>
+ <a href="Gnome_Icons/">Gnome Icons</a> Use GIMP to create nice icons.
+</p>
+<p>
  <a href="Advanced_Animations/">Advanced Animations</a> Learn how to use the GAP, GIMP animation package.
 </p>
 <div class="subtitle">Script Authoring (Presented Alphabetically)</div>
