Modified ChangeLog. Name change.
Modified ChangeLog.
Name change.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -96,7 +96,7 @@
   your GIMP like the masters do.
 </p>
 <p>
- <a href="Gnome_Icons/">Gnome Icons</a> Use GIMP to create nice icons.
+ <a href="Creating_Icons/">Creating Icons</a> Use GIMP to create nice icons.
 </p>
 <p>
  <a href="Advanced_Animations/">Advanced Animations</a> Learn how to use the GAP, GIMP animation package.
