Modified ChangeLog. Fixed the author name. Fixed the author name. Add the
Modified ChangeLog.
Fixed the author name.
Fixed the author name.
Add the Shapes tutorial.

--- a/tutorials/Tileable_Textures/index.html
+++ b/tutorials/Tileable_Textures/index.html
@@ -99,7 +99,7 @@
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2002 <a href="mailto:user@host.org">Author Name</a>
+        Tutorial &copy; 2002 <a href="mailto:adrian@gimp.org">Adrian Likins (adrian)</a>
       </span>
       <span id="footerright">
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
