Modified ChangeLog. Put the rest of the tutorial authors on the page so
Modified ChangeLog.
Put the rest of the tutorial authors on the page so the list might be done.
Add the e-mail to the author just hope it is right.
Changed the author. It was GIMP-team before and now jtl.

--- a/tutorials/Custom_Brushes/index.html
+++ b/tutorials/Custom_Brushes/index.html
@@ -75,7 +75,7 @@
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2002 <a href="mailto:author@host.org">Gautam N. Lad</a>
+        Tutorial &copy; 2002 <a href="mailto:gautam@cubicdesign.com">Gautam N. Lad</a>
       </span>
       <span id="footerright">
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
