--- a/team.html
+++ b/team.html
@@ -24,6 +24,19 @@
   <li>Tuomas Kuosmanen</li>
   <li>Jens T L</li>
   <li>Ville Pätsi</li>
+  <li>Mel Boyce</li>
+  <li>Zach Beane</li>
+  <li>Carol Spears</li>
+  <li>Gautam N. Lad</li>
+  <li>Eric Kidd</li>
+  <li>Jakub Steiner</li>
+  <li>Marco (LM) Lamberto</li>
+  <li>Adrian Likins</li>
+  <li>Simon Budig</li>
+  <li>Kevin Turner</li>
+  <li>Dov Grobgeld</li>
+  <li>James Henstridge</li>
+  <li>John Beppu</li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
