Modified ChangeLog. Edit mailto: for author.
Modified ChangeLog.
Edit mailto: for author.

--- a/tutorials/The_Basics/index.html
+++ b/tutorials/The_Basics/index.html
@@ -143,7 +143,7 @@
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2002 <a href="jtl@gimp.org">Jens T L (jtl)</a>
+        Tutorial &copy; 2002 <a href="mailto:jtl@gimp.org">Jens T L (jtl)</a>
       </span>
       <span id="footerright">
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
