--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -99,7 +99,9 @@
  <a href="Creating_Icons/">Creating Icons</a> Use GIMP to create nice icons.
 </p>
 <p>
- <a href="Advanced_Animations/">Advanced Animations</a> Learn how to use the GAP, GIMP animation package.
+ <a href="Using_GAP/">Using GAP</a> Learn the basics about using GAP, GIMP Animation Package.
+<p>
+ <a href="Advanced_Animations/">Advanced Animations</a> Learn how to make an nimation with GAP.
 </p>
 <div class="subtitle">Script Authoring (Presented Alphabetically)</div>
 <p>
