Modified ChangeLog. My English is so good forgot an "a" in animation.
Modified ChangeLog.
My English is so good forgot an "a" in animation.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -101,7 +101,7 @@
 <p>
  <a href="Using_GAP/">Using GAP</a> Learn the basics about using GAP, GIMP Animation Package.
 <p>
- <a href="Advanced_Animations/">Advanced Animations</a> Learn how to make an nimation with GAP.
+ <a href="Advanced_Animations/">Advanced Animations</a> Learn how to make an animation with GAP.
 </p>
 <div class="subtitle">Script Authoring (Presented Alphabetically)</div>
 <p>
