--- a/resources/gradients/index.html
+++ b/resources/gradients/index.html
@@ -5,86 +5,86 @@
 <div class="heading">Resources - Gradients</div>
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
-<ul>
-<li style="list-style-image: url(Abstract_1.png);">Abstract_1</li>
-<li style="list-style-image: url(Abstract_2.png);">Abstract_2</li>
-<li style="list-style-image: url(Abstract_3.png);">Abstract_3</li>
-<li style="list-style-image: url(Aneurism.png);">Aneurism</li>
-<li style="list-style-image: url(Blinds.png);">Blinds</li>
-<li style="list-style-image: url(Blue_Green.png);">Blue_Green</li>
-<li style="list-style-image: url(Browns.png);">Browns</li>
-<li style="list-style-image: url(Brushed_Aluminium.png);">Brushed_Aluminium</li>
-<li style="list-style-image: url(Burning_Paper.png);">Burning_Paper</li>
-<li style="list-style-image: url(Burning_Transparency.png);">Burning_Transparency</li>
-<li style="list-style-image: url(CD.png);">CD</li>
-<li style="list-style-image: url(CD_Half.png);">CD_Half</li>
-<li style="list-style-image: url(Caribbean_Blues.png);">Caribbean_Blues</li>
-<li style="list-style-image: url(Coffee.png);">Coffee</li>
-<li style="list-style-image: url(Cold_Steel.png);">Cold_Steel</li>
-<li style="list-style-image: url(Cold_Steel_2.png);">Cold_Steel_2</li>
-<li style="list-style-image: url(Crown_molding.png);">Crown_molding</li>
-<li style="list-style-image: url(Dark_1.png);">Dark_1</li>
-<li style="list-style-image: url(Deep_Sea.png);">Deep_Sea</li>
-<li style="list-style-image: url(Default.png);">Default</li>
-<li style="list-style-image: url(Flare_Glow_Angular_1.png);">Flare_Glow_Angular_1</li>
-<li style="list-style-image: url(Flare_Glow_Radial_1.png);">Flare_Glow_Radial_1</li>
-<li style="list-style-image: url(Flare_Glow_Radial_2.png);">Flare_Glow_Radial_2</li>
-<li style="list-style-image: url(Flare_Glow_Radial_3.png);">Flare_Glow_Radial_3</li>
-<li style="list-style-image: url(Flare_Glow_Radial_4.png);">Flare_Glow_Radial_4</li>
-<li style="list-style-image: url(Flare_Radial_101.png);">Flare_Radial_101</li>
-<li style="list-style-image: url(Flare_Radial_102.png);">Flare_Radial_102</li>
-<li style="list-style-image: url(Flare_Radial_103.png);">Flare_Radial_103</li>
-<li style="list-style-image: url(Flare_Rays_Radial_1.png);">Flare_Rays_Radial_1</li>
-<li style="list-style-image: url(Flare_Rays_Radial_2.png);">Flare_Rays_Radial_2</li>
-<li style="list-style-image: url(Flare_Rays_Size_1.png);">Flare_Rays_Size_1</li>
-<li style="list-style-image: url(Flare_Sizefac_101.png);">Flare_Sizefac_101</li>
-<li style="list-style-image: url(Four_bars.png);">Four_bars</li>
-<li style="list-style-image: url(French_flag.png);">French_flag</li>
-<li style="list-style-image: url(French_flag_smooth.png);">French_flag_smooth</li>
-<li style="list-style-image: url(Full_saturation_spectrum_CCW.png);">Full_saturation_spectrum_CCW</li>
-<li style="list-style-image: url(Full_saturation_spectrum_CW.png);">Full_saturation_spectrum_CW</li>
-<li style="list-style-image: url(German_flag.png);">German_flag</li>
-<li style="list-style-image: url(German_flag_smooth.png);">German_flag_smooth</li>
-</ul><ul>
-<li style="list-style-image: url(Golden.png);">Golden</li>
-<li style="list-style-image: url(Greens.png);">Greens</li>
-<li style="list-style-image: url(Horizon_1.png);">Horizon_1</li>
-<li style="list-style-image: url(Horizon_2.png);">Horizon_2</li>
-<li style="list-style-image: url(Incandescent.png);">Incandescent</li>
-<li style="list-style-image: url(Land_1.png);">Land_1</li>
-<li style="list-style-image: url(Land_and_Sea.png);">Land_and_Sea</li>
-<li style="list-style-image: url(Metallic_Something.png);">Metallic_Something</li>
-<li style="list-style-image: url(Mexican_flag.png);">Mexican_flag</li>
-<li style="list-style-image: url(Mexican_flag_smooth.png);">Mexican_flag_smooth</li>
-<li style="list-style-image: url(Nauseating_Headache.png);">Nauseating_Headache</li>
-<li style="list-style-image: url(Neon_Cyan.png);">Neon_Cyan</li>
-<li style="list-style-image: url(Neon_Green.png);">Neon_Green</li>
-<li style="list-style-image: url(Neon_Yellow.png);">Neon_Yellow</li>
-<li style="list-style-image: url(Pastel_Rainbow.png);">Pastel_Rainbow</li>
-<li style="list-style-image: url(Pastels.png);">Pastels</li>
-<li style="list-style-image: url(Purples.png);">Purples</li>
-<li style="list-style-image: url(Radial_Eyeball_Blue.png);">Radial_Eyeball_Blue</li>
-<li style="list-style-image: url(Radial_Eyeball_Brown.png);">Radial_Eyeball_Brown</li>
-<li style="list-style-image: url(Radial_Eyeball_Green.png);">Radial_Eyeball_Green</li>
-<li style="list-style-image: url(Radial_Glow_1.png);">Radial_Glow_1</li>
-<li style="list-style-image: url(Radial_Rainbow_Hoop.png);">Radial_Rainbow_Hoop</li>
-<li style="list-style-image: url(Romanian_flag.png);">Romanian_flag</li>
-<li style="list-style-image: url(Romanian_flag_smooth.png);">Romanian_flag_smooth</li>
-<li style="list-style-image: url(Rounded_edge.png);">Rounded_edge</li>
-<li style="list-style-image: url(Shadows_1.png);">Shadows_1</li>
-<li style="list-style-image: url(Shadows_2.png);">Shadows_2</li>
-<li style="list-style-image: url(Shadows_3.png);">Shadows_3</li>
-<li style="list-style-image: url(Skyline.png);">Skyline</li>
-<li style="list-style-image: url(Skyline_polluted.png);">Skyline_polluted</li>
-<li style="list-style-image: url(Square_Wood_Frame.png);">Square_Wood_Frame</li>
-<li style="list-style-image: url(Sunrise.png);">Sunrise</li>
-<li style="list-style-image: url(Three_bars_sin.png);">Three_bars_sin</li>
-<li style="list-style-image: url(Tropical_Colors.png);">Tropical_Colors</li>
-<li style="list-style-image: url(Tube_Red.png);">Tube_Red</li>
-<li style="list-style-image: url(Wood_1.png);">Wood_1</li>
-<li style="list-style-image: url(Wood_2.png);">Wood_2</li>
-<li style="list-style-image: url(Yellow_Contrast.png);">Yellow_Contrast</li>
-<li style="list-style-image: url(Yellow_Orange.png);">Yellow_Orange</li>
-</ul>
+<div>this is the beginning</div>
+<div><img src="Abstract_1.png" width="64" height="32" alt="gradient sample"><p>Abstract_1</p></div>
+<div><img src="Abstract_2.png" width="64" height="32" alt="gradient sample"><p>Abstract_2</p></div>
+<div><img src="Abstract_3.png" width="64" height="32" alt="gradient sample"><p>Abstract_3</p></div>
+<div><img src="Aneurism.png" width="64" height="32" alt="gradient sample"><p>Aneurism</p></div>
+<div><img src="Blinds.png" width="64" height="32" alt="gradient sample"><p>Blinds</p></div>
+<div><img src="Blue_Green.png" width="64" height="32" alt="gradient sample"><p>Blue_Green</p></div>
+<div><img src="Browns.png" width="64" height="32" alt="gradient sample"><p>Browns</p></div>
+<div><img src="Brushed_Aluminium.png" width="64" height="32" alt="gradient sample"><p>Brushed_Aluminium</p></div>
+<div><img src="Burning_Paper.png" width="64" height="32" alt="gradient sample"><p>Burning_Paper</p></div>
+<div><img src="Burning_Transparency.png" width="64" height="32" alt="gradient sample"><p>Burning_Transparency</p></div>
+<div><img src="CD.png" width="64" height="32" alt="gradient sample"><p>CD</p></div>
+<div><img src="CD_Half.png" width="64" height="32" alt="gradient sample"><p>CD_Half</p></div>
+<div><img src="Caribbean_Blues.png" width="64" height="32" alt="gradient sample"><p>Caribbean_Blues</p></div>
+<div><img src="Coffee.png" width="64" height="32" alt="gradient sample"><p>Coffee</p></div>
+<div><img src="Cold_Steel.png" width="64" height="32" alt="gradient sample"><p>Cold_Steel</p></div>
+<div><img src="Cold_Steel_2.png" width="64" height="32" alt="gradient sample"><p>Cold_Steel_2</p></div>
+<div><img src="Crown_molding.png" width="64" height="32" alt="gradient sample"><p>Crown_molding</p></div>
+<div><img src="Dark_1.png" width="64" height="32" alt="gradient sample"><p>Dark_1</p></div>
+<div><img src="Deep_Sea.png" width="64" height="32" alt="gradient sample"><p>Deep_Sea</p></div>
+<div><img src="Default.png" width="64" height="32" alt="gradient sample"><p>Default</p></div>
+<div><img src="Flare_Glow_Angular_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Angular_1</p></div>
+<div><img src="Flare_Glow_Radial_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_1</p></div>
+<div><img src="Flare_Glow_Radial_2.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_2</p></div>
+<div><img src="Flare_Glow_Radial_3.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_3</p></div>
+<div><img src="Flare_Glow_Radial_4.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_4</p></div>
+<div><img src="Flare_Radial_101.png" width="64" height="32" alt="gradient sample"><p>Flare_Radial_101</p></div>
+<div><img src="Flare_Radial_102.png" width="64" height="32" alt="gradient sample"><p>Flare_Radial_102</p></div>
+<div><img src="Flare_Radial_103.png" width="64" height="32" alt="gradient sample"><p>Flare_Radial_103</p></div>
+<div><img src="Flare_Rays_Radial_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Rays_Radial_1</p></div>
+<div><img src="Flare_Rays_Radial_2.png" width="64" height="32" alt="gradient sample"><p>Flare_Rays_Radial_2</p></div>
+<div><img src="Flare_Rays_Size_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Rays_Size_1</p></div>
+<div><img src="Flare_Sizefac_101.png" width="64" height="32" alt="gradient sample"><p>Flare_Sizefac_101</p></div>
+<div><img src="Four_bars.png" width="64" height="32" alt="gradient sample"><p>Four_bars</p></div>
+<div><img src="French_flag.png" width="64" height="32" alt="gradient sample"><p>French_flag</p></div>
+<div><img src="French_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>French_flag_smooth</p></div>
+<div><img src="Full_saturation_spectrum_CCW.png" width="64" height="32" alt="gradient sample"><p>Full_saturation_spectrum_CCW</p></div>
+<div><img src="Full_saturation_spectrum_CW.png" width="64" height="32" alt="gradient sample"><p>Full_saturation_spectrum_CW</p></div>
+<div><img src="German_flag.png" width="64" height="32" alt="gradient sample"><p>German_flag</p></div>
+<div><img src="German_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>German_flag_smooth</p></div>
+<div><p>half way point</p></div>
+<div><img src="Golden.png" width="64" height="32" alt="gradient sample"><p>Golden</p></div>
+<div><img src="Greens.png" width="64" height="32" alt="gradient sample"><p>Greens</p></div>
+<div><img src="Horizon_1.png" width="64" height="32" alt="gradient sample"><p>Horizon_1</p></div>
+<div><img src="Horizon_2.png" width="64" height="32" alt="gradient sample"><p>Horizon_2</p></div>
+<div><img src="Incandescent.png" width="64" height="32" alt="gradient sample"><p>Incandescent</p></div>
+<div><img src="Land_1.png" width="64" height="32" alt="gradient sample"><p>Land_1</p></div>
+<div><img src="Land_and_Sea.png" width="64" height="32" alt="gradient sample"><p>Land_and_Sea</p></div>
+<div><img src="Metallic_Something.png" width="64" height="32" alt="gradient sample"><p>Metallic_Something</p></div>
+<div><img src="Mexican_flag.png" width="64" height="32" alt="gradient sample"><p>Mexican_flag</p></div>
+<div><img src="Mexican_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>Mexican_flag_smooth</p></div>
+<div><img src="Nauseating_Headache.png" width="64" height="32" alt="gradient sample"><p>Nauseating_Headache</p></div>
+<div><img src="Neon_Cyan.png" width="64" height="32" alt="gradient sample"><p>Neon_Cyan</p></div>
+<div><img src="Neon_Green.png" width="64" height="32" alt="gradient sample"><p>Neon_Green</p></div>
+<div><img src="Neon_Yellow.png" width="64" height="32" alt="gradient sample"><p>Neon_Yellow</p></div>
+<div><img src="Pastel_Rainbow.png" width="64" height="32" alt="gradient sample"><p>Pastel_Rainbow</p></div>
+<div><img src="Pastels.png" width="64" height="32" alt="gradient sample"><p>Pastels</p></div>
+<div><img src="Purples.png" width="64" height="32" alt="gradient sample"><p>Purples</p></div>
+<div><img src="Radial_Eyeball_Blue.png" width="64" height="32" alt="gradient sample"><p>Radial_Eyeball_Blue</p></div>
+<div><img src="Radial_Eyeball_Brown.png" width="64" height="32" alt="gradient sample"><p>Radial_Eyeball_Brown</p></div>
+<div><img src="Radial_Eyeball_Green.png" width="64" height="32" alt="gradient sample"><p>Radial_Eyeball_Green</p></div>
+<div><img src="Radial_Glow_1.png" width="64" height="32" alt="gradient sample"><p>Radial_Glow_1</p></div>
+<div><img src="Radial_Rainbow_Hoop.png" width="64" height="32" alt="gradient sample"><p>Radial_Rainbow_Hoop</p></div>
+<div><img src="Romanian_flag.png" width="64" height="32" alt="gradient sample"><p>Romanian_flag</p></div>
+<div><img src="Romanian_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>Romanian_flag_smooth</p></div>
+<div><img src="Rounded_edge.png" width="64" height="32" alt="gradient sample"><p>Rounded_edge</p></div>
+<div><img src="Shadows_1.png" width="64" height="32" alt="gradient sample"><p>Shadows_1</p></div>
+<div><img src="Shadows_2.png" width="64" height="32" alt="gradient sample"><p>Shadows_2</p></div>
+<div><img src="Shadows_3.png" width="64" height="32" alt="gradient sample"><p>Shadows_3</p></div>
+<div><img src="Skyline.png" width="64" height="32" alt="gradient sample"><p>Skyline</p></div>
+<div><img src="Skyline_polluted.png" width="64" height="32" alt="gradient sample"><p>Skyline_polluted</p></div>
+<div><img src="Square_Wood_Frame.png" width="64" height="32" alt="gradient sample"><p>Square_Wood_Frame</p></div>
+<div><img src="Sunrise.png" width="64" height="32" alt="gradient sample"><p>Sunrise</p></div>
+<div><img src="Three_bars_sin.png" width="64" height="32" alt="gradient sample"><p>Three_bars_sin</p></div>
+<div><img src="Tropical_Colors.png" width="64" height="32" alt="gradient sample"><p>Tropical_Colors</p></div>
+<div><img src="Tube_Red.png" width="64" height="32" alt="gradient sample"><p>Tube_Red</p></div>
+<div><img src="Wood_1.png" width="64" height="32" alt="gradient sample"><p>Wood_1</p></div>
+<div><img src="Wood_2.png" width="64" height="32" alt="gradient sample"><p>Wood_2</p></div>
+<div><img src="Yellow_Contrast.png" width="64" height="32" alt="gradient sample"><p>Yellow_Contrast</p></div>
+<div><img src="Yellow_Orange.png" width="64" height="32" alt="gradient sample"><p>Yellow_Orange</p></div>
+
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
